AI-JADEDEVS4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Current_GL__c</fullName>
        <label>ERP</label>
        <picklist>
            <picklistValues>
                <fullName>Abila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axapta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Costpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellucian Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellucian Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famous Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fathom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinancialForce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Grown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards EnterpriseOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maconomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAS (90,200,500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics NAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiview</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DNB_Also_known_as__c</fullName>
        <label>DNB Also known as</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Legal_Business_Name__c</fullName>
        <label>DNB Legal Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Company_Description__c</fullName>
        <inlineHelpText>Company Description from Data.com</inlineHelpText>
        <label>D&amp;B Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Match_Grade__c</fullName>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Signed__c</fullName>
        <label>Date Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_UI__c</fullName>
        <label>Discovery UI</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery New UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoD_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoD Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSignDocumentLen__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DocuSignDocumentLen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSignEnvelopeId__c</fullName>
        <externalId>true</externalId>
        <label>DocuSignEnvelopeId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_Status__c</fullName>
        <label>DocuSign Envelope Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Status__c</fullName>
        <description>Sales Ops will do a mass update of this field for Product Management, and the validity of the field will be maintained by Product Management after. Chris Liwanag has write permissions and it is read-only for rest of the organization.</description>
        <label>Early Adopter Status</label>
        <picklist>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Adopter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA Partner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA__c</fullName>
        <description>This field used for CSM Rules to assign the CSM based on Region(Ex: EMEA,APAC,NA,..)</description>
        <formula>CONTAINS(&quot;GB:UK:AL:DZ:AD:AO:AT:BH:BY:BE:BJ:BA:BW:BG:BF:BI:CM:CV:CF:TD:KM:HR:CY:CZ:CD:DK:DJ:GQ:ER:EE:ET:FO:FI:FR:GA:GM:GE:DE:GH:GI:GR:GG:GW:IS:IR:IQ:IM:IL:IT:CI:JE:KE:LV:LB:LS:LR:LY:LI:LU:NK:MG:ML:MR:MU:MD:MC:ME:MA:NA:NL:NE:NG:NO:OM:PS:PL:PT:QA:RO:RW:SM:ST:SA:SN:RS:SK:SI:SO:ZA:ES:SD:SZ:SE:CH:SY:TZ:TG:TN:TR:UG:UA:AE:VA:EH:YE:ZM:ZW&quot;,BillingCountry)</formula>
        <label>EMEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP1__c</fullName>
        <globalPicklist>Test1</globalPicklist>
        <label>ERP</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_Timestamp__c</fullName>
        <label>EA Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eloqua_Partner_Name__c</fullName>
        <description>Provides the text name of the partner for Eloqua</description>
        <formula>Partner__r.Name</formula>
        <inlineHelpText>Provides the text name of the partner for Eloqua</inlineHelpText>
        <label>Eloqua Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <description>Enter the prospects Year End.  This is the end of their financial year.</description>
        <label>Fiscal Year End</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Adwords_ID__c</fullName>
        <description>Google SEM</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Adwords ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Content__c</fullName>
        <description>Google SEM</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Content</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Keyword__c</fullName>
        <description>Google SEM</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Keyword</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Medium__c</fullName>
        <description>Google SEM</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Medium</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <description>Google SEM</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Employee_Size__c</fullName>
        <formula>if(!ISBLANK(DandbCompany.GlobalUltimateTotalEmployees),
DandbCompany.GlobalUltimateTotalEmployees,
null
)</formula>
        <label>Global Employee Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Annual_Revenue__c</fullName>
        <description>HQ Revenue or revenue of the parent company.</description>
        <label>HQ Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_New__c</fullName>
        <globalPicklist>HR_Picklist</globalPicklist>
        <label>HR New</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HR_System__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BambooHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Vendor (See GL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paycor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paylocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TriNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Higher_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mainly for Overlay Reps</inlineHelpText>
        <label>Higher Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <description>PS Project status</description>
        <inlineHelpText>PS Project Status</inlineHelpText>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow/Stalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incumbent_Budgeting_Tool__c</fullName>
        <label>TBD Incumbent Budgeting Tool</label>
        <picklist>
            <picklistValues>
                <fullName>3ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acorn Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alight Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI360/Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud AMB (Powerplan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BudgetPak/XLerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarity Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV/Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRX Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Pillar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI/Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khalix Longview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry Classification</label>
        <referenceTo>Industry_Classification__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Focus__c</fullName>
        <description>This field is used for Partner focused on</description>
        <inlineHelpText>This field is used for Partner focused on</inlineHelpText>
        <label>Industry Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations, Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Repair, Services, Dealers, Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking, Accounting, Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages, Distillers, Wineries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance, Plumbing, HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Service &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities, Foundations, Nonprofits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware, Networking, Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Packaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Warehousing, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce, Financial Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services, Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment, Sports, Movies, TVs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming, Livestock, Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare, Hospitals, Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality, Gaming, Supplies, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Equipment, Supplies, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet &amp; Online Services Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Services &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing, Parts, Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media, Publishing, Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Equipment, Supplies, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining &amp; Metals</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Main_Category__c</fullName>
        <description>Industry Description, Main Level based on NAICS Code</description>
        <inlineHelpText>Industry Description, Main Level based on NAICS Code</inlineHelpText>
        <label>Industry Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>11 - Agriculture, Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Mining, Quarrying, and Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 - Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-33 - Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42 - Wholesale Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44-45 - Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48-49 - Transportation and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 - Finance and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53 - Real Estate and Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54 - Professional, Scientific, and Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - Management of Companies and Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56 - Administrative and Support and Waste Management and Remediation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 - Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>62 - Health Care and Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71 - Arts, Entertainment, and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72 - Accommodation and Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81 - Other Services (except Public Administration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>92 - Public Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <description>Industry Description, Sub Level based on NAICS Code</description>
        <inlineHelpText>Industry Description, Sub Level based on NAICS Code</inlineHelpText>
        <label>Industry Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>111 - Crop Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 - Animal Production and Aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>113 - Forestry and Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114 - Fishing, Hunting and Trapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 - Support Activities for Agriculture and Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211 - Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>212 - Mining (except Oil and Gas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>213 - Support Activities for Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>221 - Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>236 - Construction of Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>237 - Heavy and Civil Engineering Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>238 - Specialty Trade Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>311 - Food Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>312 - Beverage and Tobacco Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>313 - Textile Mills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>314 - Textile Product Mills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315 - Apparel Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>316 - Leather and Allied Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>321 - Wood Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>322 - Paper Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>323 - Printing and Related Support Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>324 - Petroleum and Coal Products Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>325 - Chemical Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>326 - Plastics and Rubber Products Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327 - Nonmetallic Mineral Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>331 - Primary Metal Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>332 - Fabricated Metal Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333 - Machinery Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>334 - Computer and Electronic Product Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335 - Electrical Equipment, Appliance, and Component Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instance_ID__c</fullName>
        <label>Instance ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNewAccountOnContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNewAccountOnContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Activity__c</fullName>
        <label>Last Modified Date Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <inlineHelpText>When did the customer go live? (Month and Year)</inlineHelpText>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Size_Accuracy__c</fullName>
        <description>Location Size Accuracy as determined by Data.com</description>
        <inlineHelpText>Location Size Accuracy as determined by Data.com</inlineHelpText>
        <label>Location Size Accuracy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Size__c</fullName>
        <description>Location Size as determined by Data.com</description>
        <inlineHelpText>Location Size as determined by Data.com</inlineHelpText>
        <label>Location Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDF_Sourced_Lead__c</fullName>
        <label>MDF Sourced Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <description>This field is mapped to Relayware</description>
        <label>Marketing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Sites__c</fullName>
        <label>Multiple Sites</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>This is used for reporting.</description>
        <formula>NaicsCode</formula>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <description>Full NAICS description of industry. Based on NAICS Code</description>
        <inlineHelpText>Full NAICS description of industry. Based on NAICS Code</inlineHelpText>
        <label>NAICS Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAICS_Number__c</fullName>
        <label>NAICS Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a named account</description>
        <inlineHelpText>This is a named account</inlineHelpText>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Adaptive_Subsidiary__c</fullName>
        <label>NetSuite Adaptive Subsidiary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Customer_Id__c</fullName>
        <description>This is the customer account received from NetSuite pipeline Report</description>
        <inlineHelpText>This is the customer account received from NetSuite pipeline Report</inlineHelpText>
        <label>NetSuite Customer Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is for Finance/NetSuite General Ledger purposes</inlineHelpText>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Partner_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>For Finance NetSuite Integration</inlineHelpText>
        <label>NetSuite Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>